--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -1,6 +1,6 @@
 microservice-chart:
   image:
-    repository: p4paditncorecommonacr.azurecr.io/templatepaymentsjavarepository
+    repository: p4paditncorecommonacr.azurecr.io/p4pafileshare
     tag: latest
     pullPolicy: Always
 
