[P4ADEV-1828] fixed log message and added exception handler

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,6 +40,6 @@ rest:
   organization:
     base-url: "\${ORGANIZATION_BASE_URL:}"
 
-file:
+uploads:
   ingestion-flow-file:
     valid-extension: "\${INGESTION_FLOW_FILE_VALID_EXTENSION:.zip}"
