--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -76,9 +76,12 @@ microservice-chart:
 
     SHARED_FOLDER_ROOT: "/shared"
 
+    ORGANIZATION_BASE_URL: "http://p4pa-organization-microservice-chart:8080"
+    AUTH_SERVER_BASE_URL: "http://p4pa-auth-microservice-chart:8080/payhub"
 
   envSecret:
     APPLICATIONINSIGHTS_CONNECTION_STRING: appinsights-connection-string
+    FILE_ENCRYPT_PASSWORD: file-encrypt-password
 
   # nodeSelector: {}
 
