feat: P4ADEV-1830-save-file-to-shared-folder (#9)
Co-authored-by: mscarsel <marco.scarsella@nttdata.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -51,6 +51,13 @@ folders:
   process-target-sub-folders:
     archive: "\${PROCESS_TARGET_SUB_FOLDER_ARCHIVE:archive}"
     errors: "\${PROCESS_TARGET_SUB_FOLDER_ERRORS:errors}"
+  ingestion-flow-file-type-paths:
+    RECEIPT: "data/receipt"
+    PAYMENTS_REPORTING: "data/payments_reporting"
+    TREASURY_OPI: "data/treasury/opi"
+    TREASURY_CSV: "data/treasury/csv"
+    TREASURY_XLS: "data/treasury/xls"
+    TREASURY_POSTE: "data/treasury/poste"
 
 rest:
   default-timeout:
@@ -64,3 +71,6 @@ rest:
 uploads:
   ingestion-flow-file:
     valid-extension: "\${INGESTION_FLOW_FILE_VALID_EXTENSION:.zip}"
+
+app:
+  fileEncryptPassword: "\${FILE_ENCRYPT_PASSWORD:ENCR_PSW}"
