--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,7 @@ management:
     endpoint:
       health:
         probes.enabled: true
+        logging.slow-indicator-threshold: "\${HEALTH_ACTUATOR_LOGGER_TIMEOUT_DURATION:PT1S}"
         group:
           readiness.include: "*"
           liveness.include: livenessState,diskSpace,ping
@@ -44,6 +45,13 @@ management:
         system: true
         http: true
         logback: true
+
+logging:
+  level:
+    root: "\${LOG_LEVEL_ROOT:INFO}"
+    it.gov.pagopa: "\${LOG_LEVEL_PAGOPA:INFO}"
+    org.springframework: "\${LOG_LEVEL_SPRING:INFO}"
+    org.springframework.boot.availability: "\${LOG_LEVEL_SPRING_BOOT_AVAILABILITY:DEBUG}"
 
 folders:
   shared: "\${SHARED_FOLDER_ROOT:/shared}"
