[P4ADEV-1887] fix workflow

--- a/.github/workflows/flow-release.yml
+++ b/.github/workflows/flow-release.yml
@@ -52,7 +52,6 @@ jobs:
           azure_devops_pat: ${{ secrets.AZURE_DEVOPS_TOKEN }}
           azure_template_parameters: |
             {
-              "APPS_TOP": "[p4pa-fileshare]",
-              "POSTMAN_BRANCH": "${{ github.ref_name }}",
+              "APPS_MID": "[p4pa-fileshare]",
               "TRIGGER_MESSAGE": "p4pa-fileshare"
             }
